# bnlp-data-platform-example

./: .env.example  .gitignore  BRules.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  system.drawio
airflow/config/: airflow.cfg
airflow/dags/: bnlp-data-platform.py  bnlp_data_platform.py  constants.py  data_gen.py  dbt_debug.py  dbt_test.py  logger.py
data_gen/: main.py
dbt_etl/: .user.yml  dbt_project.yml  profiles.yml
dbt_etl/models/bronze/: installments.sql  merchants.sql  payments.sql  purchases.sql  stg_installments.sql  stg_merchants.sql  stg_payments.sql  stg_purchases.sql  stg_users.sql  users.sql
dbt_etl/models/raw/: source.yml
dbt_etl/models/silver/: int_users.sql
dbt_etl/tests/: expensive_purchases.sql
static/: system.drawio
