[project]
name = "bnlp-data-platform-example"
version = "0.1.0"
description = "BNLP Data Processing Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "apache-airflow>=3.2.2",
    "apache-airflow-providers-postgres>=6.8.0",
    "dbt-postgres>=1.10.0",
    "faker>=40.23.0",
    "faker-commerce>=1.0.4",
    "polars>=1.41.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
